[tool.poetry]
name = "maidbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
rope = "^0.18.0"
ipython = "^7.22.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
